@@ -221,11 +221,7 @@ static int client_hello_callback(gnutls_session_t session, unsigned int htype,
 				(int)msg->data[pos+2], (int)msg->data[pos+3], 
 				(int)msg->data[pos+4], (int)msg->data[pos+5]);
 
-#ifdef TLS13_FINAL_VERSION
 			if (msg->data[pos] != 0x03 || msg->data[pos+1] != 0x04) {
-#else
-			if (msg->data[pos] != 0x7f || msg->data[pos+1] != 28) {
-#endif
 				fail("fail expected TLS 1.3, got %d.%d\n", (int)msg->data[pos], (int)msg->data[pos+1]);
 			}
 			pos+=2;
